# poly2pascal

./: .coveragerc  .gitignore  README.md  example.ipynb  setup.cfg
.github/workflows/: unit_tests.yml
docs/: annotations.rst  conf.py  getting_started.rst  index.rst
docs/_build/doctrees/: annotations.doctree  data_loader.doctree  environment.pickle  getting_started.doctree  index.doctree
docs/_build/html/: .buildinfo  annotations.html  data_loader.html  genindex.html  getting_started.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/html/_sources/: data_loader.rst.txt
poly2pascal/: annotations.py  data_loader.py  xml_formatter.py
poly2pascal/tests/: test_annotations.py  test_data_loader.py  test_smoke.py
src/: data_loader.py
