[metadata]
name = poly2pascal
version = 0.0.1
author = Ruan Pretorius
description = Convert POLYGON bounding boxes from .csv files to .xml annotation files in the Pascal VOC format for computer vision projects.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ruankie/poly2pascal

project_urls =
    Bug Tracker = https://github.com/ruankie/poly2pascal/issues

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
   opencv-python >= 4
   geopandas >= 0.10

[options.extras_require]
dev = 
    pytest >= 7
    black >= 22
    pylint >= 2
    jupyterlab >= 3
    sphinx >= 5
    sphinx_rtd_theme >= 1